# aycallhome

./: Cargo.toml  README.md  applet-eem.txt
docs/specs/: callhome-server.md
src/: lib.rs  main.rs
