[package]
name = "aycallhome"
version = "0.1.0"
edition = "2024"

[dependencies]
ayurl = { path = "../ayurl" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum-test = "19"
tower = { version = "0.5", features = ["util"] }
http = "1"
tempfile = "3"
